--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = { version = "0.35.2", features = ["image"] }
+gl = "0.14.0"
+sdl2 = { version = "0.35.2", features = ["image", "bundled"] }
