--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,8 @@ edition = "2021"
 [dependencies]
 gl = "0.14.0"
 rand = "0.8.5"
-sdl2 = { version = "0.35.2", features = ["image", "bundled"] }
+sdl2 = { version = "0.36.0", features = [
+  "image",
+  "bundled",
+  "unsafe_textures",
+] }
